--- a/templates/base.html
+++ b/templates/base.html
@@ -3,23 +3,52 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+    {% block meta %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--support of older Internet Explorer versions and eliminate validation errors when validating our HTML.-->
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {% endblock %}
 
+    {% block extra meta %}
+    {% endblock %}
+
+    {% block core css %}
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    {% endblock %}
 
+    {% block extra css %}
+    {% endblock %}
+
+    {% block core js %}
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" 
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    {% endblock %}
 
-    <title>Bootique Ado</title>
+    {% block extra js %}
+    {% endblock %}
+
+    <title>Bootique Ado {% block extra title %}{% endblock %}</title>
   </head>
   <body>
+    <header class="container-fluid fixed-top"></header>
 
+    {% if messages %}
+    <div class="messager-container"></div>
+    {% endif %}
+
+    {% block page_header %}
+    {% endblock %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% block postloadjs %}
+    {% endblock %}
   </body>
 </html>
