--- a/templates/base.html
+++ b/templates/base.html
@@ -11,29 +11,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% endblock %}
 
-    {% block extra meta %}
+    {% block extra_meta %}
     {% endblock %}
 
-    {% block core css %}
+    {% block core_css %}
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     {% endblock %}
 
-    {% block extra css %}
+    {% block extra_css %}
     {% endblock %}
 
-    {% block core js %}
+    {% block core_js %}
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" 
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     {% endblock %}
 
-    {% block extra js %}
+    {% block extra_js %}
     {% endblock %}
 
-    <title>Bootique Ado {% block extra title %}{% endblock %}</title>
+    <title>Bootique Ado {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
     <header class="container-fluid fixed-top"></header>
