--- a/static/css/base.css
+++ b/static/css/base.css
@@ -60,6 +60,16 @@ body {
     background-color: #000 !important;
 }
 
+.overlay {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: white;
+    z-index: -1;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
